re PR fortran/31214 (User-defined operator using entry leads to ICE)

2007-04-07  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/31214
	* trans-decl.c (gfc_get_symbol_decl): Allow unreferenced use
	associated symbols.

2007-04-07  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/31424
	* gfortran.dg/unreferenced_use_assoc_1.f90: New test.

From-SVN: r123642